--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 }
 body{
     margin: 0;
+    background-color: #e7e9eb;
 }
 .flex-container{
     display: flex;
@@ -13,8 +14,8 @@ body{
 }
 .second-item{
     width: 80%;
-    border: 2px solid #E8EBE4;
     border-left: none;
+    align-self: center;
 }
 .profile{
     display: flex;
@@ -24,6 +25,7 @@ body{
     box-sizing: border-box;
     border: 2px solid #E8EBE4;
     border-bottom: none;
+    background-color: white;
 }
 .profile-text{
     display: inline-block;
@@ -69,6 +71,7 @@ h6{
     height: 118px;
     box-sizing: border-box;
     border: 2px solid #E8EBE4;
+    background-color: white;
 }
 .btn a{
     text-decoration: none;
@@ -82,9 +85,32 @@ h6{
     align-items: center;
     border: 2px solid #E8EBE4;
     border-top: none;
+    background-color: white;
 }
 .chat-container img{
     width: 60px;
     border-radius: 50%;
     border: 1px solid #E8EBE4;
+}
+.content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.content img{
+    width: 25%;
+}
+h1{
+    text-align: center;
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+p{
+    text-align: center;
+    font-size: 18px;
+    margin-top: 0;
+}
+.bold{
+    font-weight: 600;
 }
